force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/compliancequest__SQX_Nonconformance__c.object-meta.xml
<CustomObject>
    <description>This entity is responsible for storing information specific to Non-conformance. It will be used to record information such as type of NC, its priority, related department and so forth. Non-conformance can be defined as any abnormality(deviation from the standard/specification) seen in a process or product in an organization.</description>
    <label>Nonconformance</label>
    <nameField>
        <displayFormat>NC-{000000}</displayFormat>
        <label>NC Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Nonconformance</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>