force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__Org_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Org_Business_Unit__c</fullName>
    <description>This field records business unit for nonconformance.</description>
    <inlineHelpText>The business unit that is responsible for the NC.</inlineHelpText>
    <label>Org. Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>compliancequest__Org_Division__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>compliancequest__SQX_Business_Unit</valueSetName>
    </valueSet>
</CustomField>