force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__Org_Region__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Org_Region__c</fullName>
    <description>This field records region for nonconformance.</description>
    <inlineHelpText>The region that is responsible for the NC.</inlineHelpText>
    <label>Org. Region</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>compliancequest__Org_Business_Unit__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>compliancequest__SQX_Region</valueSetName>
    </valueSet>
</CustomField>