force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/compliancequest__Status__c.field-meta.xml
<CustomField>
    <fullName>compliancequest__Status__c</fullName>
    <description>Records whether the state the NC record is in, where &apos;Draft&apos; means it has been newly created, &apos;Triage&apos; means that the record has been submitted for triaging to the respective department, &apos;Open&apos; indicates that NC is being worked on and &apos;Close&apos; means that the issue related to NC has been addressed using Disposition, Containment or Implementation.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Void</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>