force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/fields/Related_to_Case__c.field-meta.xml
<CustomField>
    <fullName>Related_to_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Nonconformance</relationshipLabel>
    <relationshipName>Nonconformance</relationshipName>
    <type>Lookup</type>
</CustomField>