force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/validationRules/compliancequest__Ensure_Issue_Type_is_not_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>compliancequest__Ensure_Issue_Type_is_not_blank</fullName>
    <active>false</active>
    <description>Rule to ensure that Issue Type is not blank</description>
    <errorConditionFormula>AND( NOT($Permission.compliancequest__SQXDataMigrationCustomPermission), ISBLANK(TEXT(compliancequest__Type_Of_Issue__c ) ) )</errorConditionFormula>
    <errorDisplayField>compliancequest__Type_Of_Issue__c</errorDisplayField>
    <errorMessage>Issue Type is required</errorMessage>
</ValidationRule>