force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/validationRules/compliancequest__Ensure_Part_Exists_For_IssueType_Product.validationRule-meta.xml
<ValidationRule>
    <fullName>compliancequest__Ensure_Part_Exists_For_IssueType_Product</fullName>
    <active>false</active>
    <description>This validation rule ensures that Part is provided in NC for Issue Type Product.</description>
    <errorConditionFormula>AND( NOT($Permission.compliancequest__SQXDataMigrationCustomPermission), ISBLANK(compliancequest__SQX_Part__c ), ISPICKVAL(compliancequest__Type_Of_Issue__c, &apos;Product&apos;))</errorConditionFormula>
    <errorMessage>Part is required for Issue Type Product.</errorMessage>
</ValidationRule>