force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/validationRules/compliancequest__Ensure_Service_Exists_For_Process.validationRule-meta.xml
<ValidationRule>
    <fullName>compliancequest__Ensure_Service_Exists_For_Process</fullName>
    <active>false</active>
    <description>This validation rule ensures that Service is Provided for Issue Type Process.</description>
    <errorConditionFormula>AND( NOT($Permission.compliancequest__SQXDataMigrationCustomPermission), ISBLANK(compliancequest__SQX_Service__c), ISPICKVAL(compliancequest__Type_Of_Issue__c, &apos;Process&apos;))</errorConditionFormula>
    <errorMessage>Service is required for Issue Type Process.</errorMessage>
</ValidationRule>