force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/validationRules/compliancequest__Prevent_NC_Insert_If_No_Department.validationRule-meta.xml
<ValidationRule>
    <fullName>compliancequest__Prevent_NC_Insert_If_No_Department</fullName>
    <active>false</active>
    <description>This validation rule prevents insertion of NC record if Department is blank.</description>
    <errorConditionFormula>AND(
NOT($Permission.compliancequest__SQXDataMigrationCustomPermission),
ISBLANK( compliancequest__SQX_Department__c)
)</errorConditionFormula>
    <errorMessage>Department cannot be blank.</errorMessage>
</ValidationRule>