force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/validationRules/compliancequest__Prevent_NC_Insert_If_No_Occurrence_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>compliancequest__Prevent_NC_Insert_If_No_Occurrence_Date</fullName>
    <active>false</active>
    <description>This validation rule prevents insertion of NC record if Occurrence Date is blank.</description>
    <errorConditionFormula>AND(
NOT($Permission.compliancequest__SQXDataMigrationCustomPermission),
ISBLANK( compliancequest__Occurrence_Date__c )
)</errorConditionFormula>
    <errorMessage>Occurrence Date cannot be blank.</errorMessage>
</ValidationRule>