force-app/main/default/objects/compliancequest__SQX_Nonconformance__c/listViews/Manufacturing_SQX_Nonconformance.listView-meta.xml
<ListView>
    <fullName>Manufacturing_SQX_Nonconformance</fullName>
    <filterScope>Queue</filterScope>
    <label>Manufacturing</label>
    <queue>Manufacturing</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>